# wk-hexapod

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  requirements.txt
docker/: entrypoint.sh
docs/: ubuntu-hardware-setup.md
ros2_ws/src/hexapod_bringup/: CMakeLists.txt  package.xml
ros2_ws/src/hexapod_bringup/config/: nav2_params.yaml  robot.yaml  slam_params.yaml
ros2_ws/src/hexapod_bringup/launch/: hardware.launch.py  navigation.launch.py  robot.launch.py  slam.launch.py
ros2_ws/src/hexapod_bringup/urdf/: hexapod.urdf
ros2_ws/src/hexapod_controller/: package.xml  test_ros.sh  test_walk.py
ros2_ws/src/hexapod_controller/hexapod_controller/: controller.py
ros2_ws/src/hexapod_hardware/: package.xml  setup.cfg  setup.py
ros2_ws/src/hexapod_hardware/config/: hardware.yaml
ros2_ws/src/hexapod_hardware/hexapod_hardware/: __init__.py  battery_monitor.py  buzzer_controller.py  imu_driver.py  led_controller.py  power_indicator.py  range_finder_driver.py  servo_driver.py  startup_sequence.py
ros2_ws/src/hexapod_interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/hexapod_interfaces/action/: MoveDistance.action
ros2_ws/src/hexapod_perception/: setup.py
ros2_ws/src/hexapod_perception/config/: perception.yaml
ros2_ws/src/hexapod_perception/hexapod_perception/: web_dashboard.py
scripts/: ubuntu-setup.sh
systemd/: hexapod.service  install.sh
